--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,65 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cow Farm Database</title>
 </head>
 <body>
     <h1>Cow Farm Database</h1>
-    <img style = "align-items: center" src="../Images/SnapchatCow.jpg" >
+    <img class="center" src="../Images/SnapchatCow.jpg" width="50%" alt="Cow with Hearts">
+
+    <main>
+        <section>
+            <h2>Add a New Farm</h2>
+            <form id="addFarmForm">
+                <label for="farmName">Farm Name:</label>
+                <input type="text" id="farmName" name="farmName" required>
+
+                <label for="location">Location:</label>
+                <input type="text" id="location" name="location" required>
+
+                <label for="size">Size (in acres):</label>
+                <input type="number" id="size" name="size" required>
+
+                <button type="submit">Add Farm</button>
+            </form>
+        </section>
+
+        <section>
+            <h2>Add a New Cow</h2>
+            <form id="addCowForm">
+                <label for="farmId">Farm ID:</label>
+                <input type="number" id="farmId" name="farmId" required>
+
+                <label for="cowId">Cow ID:</label>
+                <input type="text" id="cowId" name="cowId" required>
+
+                <label for="dob">Date of Birth:</label>
+                <input type="date" id="dob" name="dob" required>
+
+                <label for="breed">Breed:</label>
+                <input type="text" id="breed" name="breed" required>
+
+                <button type="submit">Add Cow</button>
+            </form>
+        </section>
+
+        <section>
+            <h2>Transfer Cow</h2>
+            <form id="transferCowForm">
+                <label for="cowId">Cow ID:</label>
+                <input type="text" id="cowTransferId" name="cowId" required>
+
+                <label for="fromFarmId">From Farm ID:</label>
+                <input type="number" id="fromFarmId" name="fromFarmId" required>
+
+                <label for="toFarmId">To Farm ID:</label>
+                <input type="number" id="toFarmId" name="toFarmId" required>
+
+                <button type="submit">Transfer Cow</button>
+            </form>
+        </section>
+
+        <!-- Additional forms for other functionalities -->
+    </main>
 </body>
 </html>
